Fix media query for portait display on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -199,7 +199,7 @@
 
 /* lock to portait on mobile */
 
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
+@media screen and (min-width: 320px) and (max-width: 812px) and (orientation: landscape) {
   html {
     transform: rotate(-90deg);
     transform-origin: left top;
